<resources>
    <string name="app_name">Ping Pong X</string>
    <string name="terminar_partida">TERMINAR PARTIDA</string>
    <string name="ponto">PONTO</string>
    <string name="casa">CASA</string>
    <string name="visitante">VISITANTE</string>
    <string name="_0">0</string>
    <string name="ping_pong_x">Ping Pong X</string>
    <string name="x">x</string>
    <string name="revanche">REVANCHE</string>
    <string name="start">COMEÇAR</string>
</resources>